# omni-bench

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
global_benchmark/: main.py
global_benchmark/benchmarks/: __init__.py  big_code_bench.py  big_code_evaluation_harness.py  llm_evaluation_harness.py  runner.py
global_benchmark/definitions/: big_code_bench_eval.def  big_code_bench_gen.def  big_code_evaluation_harness.def  llm_evaluation_harness.def
global_benchmark/services/: __init__.py  config.py  run.py  save.py  setup.py
global_benchmark/utils/: __init__.py  benchmark_framework.py  map.py  run_info.py  slurm_info.py  task.py
global_benchmark/utils/enums/: __init__.py  benchmark.py  task.py
global_benchmark/utils/function/: __init__.py  merge_enum.py
global_benchmark/utils/functions/: __init__.py  get_short_precision.py
global_benchmark/utils/maps/: __init__.py  benchmark_map.py  task_map.py
global_benchmark/utils/schemas/: __init__.py  run_config.py
omni/: main.py
omni/benchmarks/: __init__.py  big_code_bench.py  big_code_evaluation_harness.py  llm_evaluation_harness.py  ruler.py  runner.py
omni/definitions/: big_code_evaluation_harness.def  llm_evaluation_harness.def  ruler.def
omni/services/: __init__.py  config.py  run.py  save.py  setup.py
omni/utils/enums/: __init__.py  benchmark.py  container_system.py  precision.py  task.py
omni/utils/functions/: __init__.py  get_short_precision.py
omni/utils/maps/: __init__.py  benchmark_map.py  task_map.py
omni/utils/schemas/: __init__.py  apptainer_bind.py  benchmark_config.py  (+3 more)
