[project]
name = "omni"
version = "0.1.0"
description = "A CLI tool for benchmarking and comparing the performance of different LLM."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "filelock>=3.18.0",
    "inquirer>=3.4.0",
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "typer>=0.15.4",
    "uuid>=1.30",
]
[dependency-groups]
dev = [
    "ruff>=0.11.10",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["omni"]
[project.scripts]
omni = "omni.main:app"
